tests/test132.rael.exp
Error [tests/test132.rael:1:17]: Invalid range for slicing
| log "string" at (-1 to 3)
|                 ^
